# velbus-aio

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  main.yml  precommitupdate.yml  python-publish.yml
examples/: discover.py  load_modules.py  read_bus.py  read_cache.py  scan.py
tests/: channels_test.py  command_registry_test.py  module_name_test.py  module_status_test.py  temperature_test.py  test_command_registry.py  test_module_name.py  thermostat_operating_mode_test.py  vmbdali_test.py
velbusaio/: channels.py  command_registry.py  const.py  controller.py  discovery.py  exceptions.py  handler.py  helpers.py  message.py  module.py  module_registry.py  parser.py  protocol.json  protocol.py  raw_message.py  stream.py  util.py
velbusaio/channels/: channel.py
velbusaio/messages/: __init__.py  blind_status.py  bus_active.py  bus_error_counter_status.py  bus_error_counter_status_request.py  bus_off.py  channel_name_part1.py  channel_name_part2.py  channel_name_part3.py  channel_name_request.py  clear_led.py  counter_status.py  counter_status_request.py  cover_down.py  cover_off.py  cover_position.py  cover_up.py  dali_device_settings.py  dali_device_settings_request.py  dali_dim_value_status.py  dimmer_channel_status.py  dimmer_status.py  edge_set_color.py  edge_set_custom_color.py  fast_blinking_led.py  forced_off.py  forced_on.py  interface_status_request.py  ir_receiver_status.py  kwh_status.py  light_value_request.py  memo_text.py  memory_data.py  memory_data_block.py  memory_dump_request.py  meteo_raw.py  module_status.py  module_status_request.py  module_subtype.py  module_type.py  (+43 more)
