[metadata]
license 			    = MIT
license_file 			= LICENSE
platforms 			    = any
description 			= Python Library for the Velbus protocol based on asyncio
long_description 		= file: README.md
long_description_content_type 	= text/markdown
keywords 			= home, velbus, automation
classifier 			=
    Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
	Topic :: Home Automation
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
